# ProyectoIS_equipo202

./: CMakeLists.txt  DataManager.cc  GestorDatos.h  chats.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  usuarios.txt
src/: proyecto-main.cc  proyecto.cc  proyecto.h  proyecto.ui
